--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       rel="stylesheet"
     />
     <!-- Css Linker -->
-    <link rel="stylesheet" href="/Css/index.css" />
+    <link rel="stylesheet" href="Css/index.css" />
     <!-- Media Queries -->
-    <link rel="stylesheet" href="/Css/media.css" />
+    <link rel="stylesheet" href="Css/media.css" />
     <title>main</title>
   </head>
   <body>
