--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="nav">
-      <img src="/imgs/logo.svg" alt="logo-image" />
+      <img src="imgs/logo.svg" alt="logo-image" />
       <ul class="list">
         <li class="item">Home</li>
         <li class="item">New</li>
@@ -32,7 +32,7 @@
     <!-- Start Cont Space  -->
     
     <div class="container">
-      <div class="image"><img src="/imgs/image-web-3-desktop.jpg" alt="" class="main-img" /></div>
+      <div class="image"><img src="imgs/image-web-3-desktop.jpg" alt="" class="main-img" /></div>
       <aside class="aside">
         <div class="aside-content">
           <h3 class="header">New</h3>
@@ -64,7 +64,7 @@
       <div class="list">
         <ul class="ul-list">
           <li class="item">
-            <img src="./imgs/image-retro-pcs.jpg" alt="">
+            <img src="imgs/image-retro-pcs.jpg" alt="">
             <div class="item-content">
               <p class="p-item">01</p>
             <h4>Reviving Retro PCs</h4>
@@ -74,7 +74,7 @@
           <!-- 02 -->
 
           <li class="item">
-            <img src="./imgs/image-top-laptops.jpg" alt="">
+            <img src="imgs/image-top-laptops.jpg" alt="">
            <div class="item-content">
             <p class="p-item">02</p>
             <h4>Top 10 Laptops of 2022</h4>
@@ -84,7 +84,7 @@
           <!-- 03 -->
 
           <li class="item">
-            <img src="./imgs/image-gaming-growth.jpg" alt="">
+            <img src="imgs/image-gaming-growth.jpg" alt="">
             <div class="item-content">
               <p class="p-item">03</p>
               <h4>The Growth of Gaming</h4>
