--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </ul>
     </div>
     <!-- Image Space -->
-    
+   
     <!-- Start Cont Space  -->
     
     <div class="container">
@@ -64,7 +64,7 @@
       <div class="list">
         <ul class="ul-list">
           <li class="item">
-            <img src="imgs/image-retro-pcs.jpg" alt="">
+            <img src="imgs/image-retro-pcs.jpg" class= "image" alt="">
             <div class="item-content">
               <p class="p-item">01</p>
             <h4>Reviving Retro PCs</h4>
@@ -74,7 +74,7 @@
           <!-- 02 -->
 
           <li class="item">
-            <img src="imgs/image-top-laptops.jpg" alt="">
+            <img src="imgs/image-top-laptops.jpg" alt="" class="image">
            <div class="item-content">
             <p class="p-item">02</p>
             <h4>Top 10 Laptops of 2022</h4>
@@ -84,7 +84,7 @@
           <!-- 03 -->
 
           <li class="item">
-            <img src="imgs/image-gaming-growth.jpg" alt="">
+            <img src="imgs/image-gaming-growth.jpg" alt="" class="image">
             <div class="item-content">
               <p class="p-item">03</p>
               <h4>The Growth of Gaming</h4>
